<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoftCoin</string>
    <string name="welcome_title_1">Buying and selling</string>
    <string name="welcome_title_2">Cryptocurrency rate</string>
    <string name="welcome_title_3">Converter</string>
    <string name="welcome_subtitle_1">Buy when cheap,sell when expensive.</string>
    <string name="welcome_subtitle_2">Follow the exchange rate and react in time to changes in price dynamics.</string>
    <string name="welcome_subtitle_3">Find out how much ethereum in 1.23 bitcoins.</string>
    <string name="welcome_btn">START</string>
    <string name="menu_item_accounts">Wallets</string>
    <string name="menu_item_rate">Rate</string>
    <string name="menu_item_converter">Converter</string>
    <string name="bottom_navigation_item_converter">@string/menu_item_converter</string>
    <string name="rate_screen_title">General analysis</string>
    <string name="rate_item_percent_change">%.2f%%</string>
    <string name="currency_amount" translatable="false">%s %s</string>
    <string name="menu_currency_select">Select the currency</string>
    <string name="sign_dollar" translatable="false">$</string>
    <string name="sign_euro" translatable="false">€</string>
    <string name="sign_ruble" translatable="false">₽</string>
    <string name="dialog_currency_dollar_usd">Dollar | USD</string>
    <string name="dialog_currency_euro_eur">Euro | EUR</string>
    <string name="dialog_currency_rouble_rub">Rouble | RUB</string>
    <string name="currencies_bottom_sheet_currency_name" translatable="false">%s | %s</string>
    <string name="wallets_menu_item_new_wallet">New wallet</string>

    <string name="wallets_screen_title">Wallets</string>
    <string name="notification_rate">Rate changed %s</string>
    <string name="notification_channel_rate">Rate changes</string>

</resources>